@@ -39,6 +39,11 @@ Gimp/UI.pm
 Gimp/Util.pm
 Gimp/Feature.pm
 Gimp/Pod.pm
+Gimp/Module.pm
+embed/Makefile.PL
+embed/perlmod.c
+nolib/Makefile.PL
+nolib/Module.xs
 examples/PDB
 examples/alpha2color.pl
 examples/tex-to-float
