@@ -10,6 +10,7 @@ make test TEST_VERBOSE=1
 
 bugs
 
+  * do NOT modinstall with older gimp versions (!!!!!!!!!)
 [DONE]  * make parasiterc ascii-only !!!!
   * improve examples/example-*.pl
   * install in /usr/local (???? why? more options??)
